--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -9,6 +9,7 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: "3.8"
-      - run: |
-          pip install -r tools/env/python-deps.txt
-          /bin/bash tools/auto-update.sh
+      - name: pip-install deps
+        run: pip install -r tools/env/python-deps.txt
+      - name: auto-update.sh
+        run: bash auto-update.sh
