--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -12,4 +12,4 @@ jobs:
       - name: pip-install deps
         run: pip install -r tools/env/python-deps.txt
       - name: auto-update.sh
-        run: bash auto-update.sh
+        run: bash tools/auto-update.sh
